:memo: 케이스별 주석 수정